--- a/backend/public/index.hbs
+++ b/backend/public/index.hbs
@@ -10,26 +10,24 @@
   <script>
     function initMap() {
       var directionsService = new google.maps.DirectionsService();
-      var directionsRenderer = new google.maps.DirectionsRenderer({suppressMarkers: true});
-      var earl132 = new google.maps.LatLng(44.228690, -76.487910);
+      //var directionsRenderer = new google.maps.DirectionsRenderer({suppressMarkers: true});
+      var directionsRenderer = new google.maps.DirectionsRenderer();
+      var center = new google.maps.LatLng({{lat}}, {{lon}});
       var mapOptions = {
         zoom: 7,
-        center: earl132,
+        center,
         disableDefaultUI: true
       }
       var map = new google.maps.Map(document.getElementById('map'), mapOptions);
       directionsRenderer.setMap(map);
 
-      var start = earl132;
+      var start = center;
       var end = new google.maps.LatLng(44.232370, -76.491840);
       var request = {
         origin: start,
-        destination: end,
+        destination: new google.maps.LatLng({{dest_lat}}, {{dest_lon}}),
         waypoints: [
-          {
-            location: new google.maps.LatLng(44.225260, -76.486190),
-            stopover: true,
-          }
+          {{{waypoint_js}}}
         ],
         travelMode: 'DRIVING'
       };
