--- a/backend/public/index.hbs
+++ b/backend/public/index.hbs
@@ -3,7 +3,7 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAhUl9axir3grRjxVW61ZTL3I0ZgSS23_E"></script>
   </head>
 
-  <body>
+  <body style='padding:0px;margin:0px;'>
     <div id="map" style="width:100%;height:100%"></div>
   </body>
 
